force-app/main/default/objects/Ticket_Request__c/fields/Actual_Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Charge_Amount__c</fullName>
    <formula>IF((Assignment_Charge_Amount__c - Applied_Discount__c) + Handling_Fee__c +  Shipping_Cost__c &lt; 0, 0, (Assignment_Charge_Amount__c - Applied_Discount__c) + Handling_Fee__c +  Shipping_Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Charge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>