force-app/main/default/objects/Ticket_Request__c/fields/Admin_Comments__c.field-meta.xml
<CustomField>
    <fullName>Admin_Comments__c</fullName>
    <label>Admin Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>