force-app/main/default/objects/Ticket_Request__c/fields/Applied_Discount__c.field-meta.xml
<CustomField>
    <fullName>Applied_Discount__c</fullName>
    <label>Applied Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>