force-app/main/default/objects/Ticket_Request__c/fields/BEAT_Event_Opponent__c.field-meta.xml
<CustomField>
    <fullName>BEAT_Event_Opponent__c</fullName>
    <formula>Event__r.nd_Opponent__c</formula>
    <label>BEAT Event Opponent</label>
    <type>Text</type>
</CustomField>