force-app/main/default/objects/Ticket_Request__c/fields/Constituent__c.field-meta.xml
<CustomField>
    <fullName>Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ticket Requests</relationshipLabel>
    <relationshipName>Ticket_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>