force-app/main/default/objects/Ticket_Request__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.Status</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Ticket Requests</relationshipLabel>
    <relationshipName>Ticket_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>