force-app/main/default/objects/Ticket_Request__c/fields/Handling_Fee__c.field-meta.xml
<CustomField>
    <fullName>Handling_Fee__c</fullName>
    <formula>IF(( Assignment_Charge_Amount__c -  Applied_Discount__c )  *  Handling_Fee_Percent__c &lt; 0, 0, (Assignment_Charge_Amount__c -  Applied_Discount__c )  *  Handling_Fee_Percent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handling Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>