force-app/main/default/objects/Ticket_Request__c/fields/Requested_By_Group_Region__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_Group_Region__c</fullName>
    <label>Requested By Group/Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Group_Region</valueSetName>
    </valueSet>
</CustomField>