force-app/main/default/objects/Ticket_Request__c/fields/Responsible_Payer__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Payer__c</fullName>
    <label>Responsible Payer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recipient</fullName>
            </value>
            <value>
                <fullName>FOAPAL</fullName>
            </value>
            <value>
                <fullName>Comp Personal</fullName>
            </value>
            <value>
                <fullName>No Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>