force-app/main/default/objects/Ticket_Request__c/fields/Seat_Lot_Requested__c.field-meta.xml
<CustomField>
    <fullName>Seat_Lot_Requested__c</fullName>
    <label># Seat Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>