force-app/main/default/objects/Ticket_Request__c/fields/Seat_Lots_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Seat_Lots_Assigned__c</fullName>
    <label># Seat Assigned</label>
    <summaryForeignKey>Seat_Lot_Assignment__c.Ticket_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>