force-app/main/default/objects/Ticket_Request__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket Level</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Section__c.Event__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Event__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Ticket Requests</relationshipLabel>
    <relationshipName>Ticket_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>