force-app/main/default/objects/Ticket_Request__c/fields/Section_Seat_Lots_Available__c.field-meta.xml
<CustomField>
    <fullName>Section_Seat_Lots_Available__c</fullName>
    <formula>Section__r.Available__c</formula>
    <label># Ticket Level Seats Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>