force-app/main/default/objects/Ticket_Request__c/fields/Sit_With__c.field-meta.xml
<CustomField>
    <fullName>Sit_With__c</fullName>
    <label>Sit With</label>
    <length>255</length>
    <type>Text</type>
</CustomField>