force-app/main/default/objects/Ticket_Request__c/fields/Swap__c.field-meta.xml
<CustomField>
    <fullName>Swap__c</fullName>
    <label>Swap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>