force-app/main/default/objects/Ticket_Request__c/fields/Transaction_Code__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Code__c</fullName>
    <label>Transaction Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AI-Additional Inventory</fullName>
            </value>
            <value>
                <fullName>AOP-Access Only Pass</fullName>
            </value>
            <value>
                <fullName>D-Donor</fullName>
            </value>
            <value>
                <fullName>NC-No Charge</fullName>
            </value>
            <value>
                <fullName>PLC-President&apos;s Leadership Council</fullName>
            </value>
            <value>
                <fullName>US-University Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>