force-app/main/default/objects/Ticket_Request__c/validationRules/Payment_Method.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Method</fullName>
    <active>true</active>
    <description>If Status = Approved or Transferred, then Payment Method is required</description>
    <errorConditionFormula>OR(
TEXT( Status__c ) = &quot;Approved&quot; &amp;&amp; ISBLANK(TEXT(Payment_Method__c)),
TEXT( Status__c ) = &quot;Transferred&quot; &amp;&amp; ISBLANK(TEXT(Payment_Method__c)),
NOT(ISBLANK(TEXT( Seat_Approved__c ))) &amp;&amp; ISBLANK(TEXT(Payment_Method__c))
)</errorConditionFormula>
    <errorMessage>If Status = Approved or Transferred, then Payment Method is required</errorMessage>
</ValidationRule>