force-app/main/default/objects/Ticket_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Event_Date__c</columns>
    <columns>Constituent__c</columns>
    <columns>Status__c</columns>
    <columns>Responsible_Payer__c</columns>
    <columns>Seat_Lot_Requested__c</columns>
    <columns>Seat_Lots_Assigned__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Transaction_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Date__c</field>
        <operation>equals</operation>
        <value>12/19/2022</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>All</label>
</ListView>