force-app/main/default/objects/Ticket_Request__c/listViews/BEAT_Admin_Event_and_Ticket_Type.listView-meta.xml
<ListView>
    <fullName>BEAT_Admin_Event_and_Ticket_Type</fullName>
    <columns>NAME</columns>
    <columns>Constituent__c</columns>
    <columns>Household_Lifetime_Production__c</columns>
    <columns>Event__c</columns>
    <columns>Group__c</columns>
    <columns>Event_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Transaction_Code__c</columns>
    <columns>Location__c</columns>
    <columns>Section__c</columns>
    <columns>Ticket_Level_Type__c</columns>
    <columns>Requested_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>contains</operation>
        <value>TEST</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Ticket_Level_Type__c</field>
        <operation>equals</operation>
        <value>Parking,Seat</value>
    </filters>
    <label>BEAT Admin - Event and Ticket Type</label>
    <sharedTo>
        <group>BEAT_Administrators</group>
    </sharedTo>
</ListView>