force-app/main/default/objects/Ticket_Request__c/listViews/New_Ticket_Requests.listView-meta.xml
<ListView>
    <fullName>New_Ticket_Requests</fullName>
    <columns>NAME</columns>
    <columns>Group__c</columns>
    <columns>Event__c</columns>
    <columns>Constituent__c</columns>
    <columns>Status__c</columns>
    <columns>Household_Lifetime_Production__c</columns>
    <columns>Ticket_Level__c</columns>
    <columns>Seat_Lot_Requested__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Actual_Charge_Amount__c</columns>
    <columns>Requestor_Comments__c</columns>
    <columns>Admin_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>contains</operation>
        <value>USC,TEST</value>
    </filters>
    <label>New Ticket Requests</label>
</ListView>